trying to fix pitch on safari

--- a/LA_LIGA_REKREATIVO/Client/wwwroot/css/app.css
+++ b/LA_LIGA_REKREATIVO/Client/wwwroot/css/app.css
@@ -214,13 +214,14 @@ a, .btn-link {
     position: relative;
     width: 100%;
     height: 500px;
-    border: 2px solid #fff; /* White border for pitch */
-    border-radius: 10px;
     background: #3C805F;
-    background-image: -webkit-linear-gradient(90deg, #3C805F 50%, #2D6A4F 50%), linear-gradient(90deg, #3C805F 50%, #2D6A4F 50%);
+    background-image: linear-gradient( 90deg, #3C805F 0%, #3C805F 49.9%, #2D6A4F 50.1%, #2D6A4F 100% );
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    border: 2px solid #fff;
+    border-radius: 10px;
 }
+
 
 /* Defining pitch lines */
 .line {
